--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1405,7 +1405,144 @@
         </div>
     </details>
 </section>
-                
+                <section aria-labelledby="bolum-hak-arayan">
+  <h3 id="bolum-hak-arayan" class="subsection-title text-2xl font-bold mt-12 mb-4">YEDİNCİ BÖLÜM: Hak Arama Hürriyetleri ve Yargısal Güvenceler</h3>
+  <p class="text-slate-600 mb-6" style="text-align: justify;">
+    Bu bölüm, temel hak ve hürriyetlerin sadece kağıt üzerinde kalmamasını sağlayan <strong>yargısal mekanizmaları</strong> düzenler. Bir hakkın varlığı kadar, o hakkın ihlal edilmesi durumunda <strong>başvurulacak yollar</strong> ve bu süreçlerin <strong>adil işleyeceğine dair güvenceler</strong> de hayati öneme sahiptir. Madde 36, 37 ve 38, adil bir hukuk düzeninin temel taşlarıdır ve GYS’de <strong>yorum, bilgi ve analiz sorularının en yoğun çıktığı alanlardan biridir</strong>.
+  </p>
+
+  <!-- Madde 36 -->
+  <details id="madde-36" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 36 – Hak Arama Hürriyeti
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Herkes, meşru vasıta ve yollardan faydalanmak suretiyle yargı mercileri önünde davacı veya davalı olarak iddia ve savunma ile adil yargılanma hakkına sahiptir.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Hiçbir mahkeme, görev ve yetkisi içindeki davaya bakmaktan kaçınamaz.
+      </blockquote>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Adaletin Kapısı</h6>
+        <p style="text-align: justify;" class="mb-2">Bu madde, adeta adalet sisteminin <strong>ana giriş kapısıdır</strong>. Devletin vatandaşa “Eğer bir derdin, bir anlaşmazlığın varsa veya bir hakkının ihlal edildiğini düşünüyorsan, kapım sana açık” demesidir. Üç temel güvence sunar:</p>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li><strong>İddia ve Savunma Hakkı:</strong> Mahkeme önünde derdini anlatma ve kendine yöneltilen iddialara karşı cevap verme hakkı. Bu, “silahların eşitliği” ilkesinin temelidir.</li>
+          <li><strong>Adil Yargılanma Hakkı:</strong> 2001 değişikliğiyle eklenen bu güvence, sadece başvurabilmekle kalmaz; sürecin <strong>adil, tarafsız, aleni ve makul sürede</strong> işleyeceğine dair teminattır.</li>
+          <li><strong>İhkak-ı Haktan İstinkaf Yasağı:</strong> Mahkeme, görevi içindeki bir davaya bakmaktan “istemiyorum” diye kaçamaz. Bu, yargı bağımsızlığının bir gereğidir.</li>
+        </ul>
+      </div>
+
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Sınav Stratejisi: Hangisi Kapsamındadır?</h6>
+        <p style="text-align: justify;" class="text-sm">GYS’de “Aşağıdakilerden hangisi <strong>hak arama hürriyetinin kapsamındadır/dışındadır</strong>?” tarzı sorular sık gelir. Doğru seçenekler genellikle:</p>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li>İddia ve savunma hakkı</li>
+          <li>Adil yargılanma hakkı</li>
+          <li>Mahkemenin davaya bakmaktan kaçınmaması</li>
+        </ul>
+        <p class="text-sm mt-2"><strong>Çeldirici:</strong> “Yargıtay’a temyiz” gibi prosedürler bu maddenin doğrudan kapsamı değildir.</p>
+      </div>
+    </div>
+  </details>
+
+  <!-- Madde 37 -->
+  <details id="madde-37" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 37 – Kanuni Hâkim Güvencesi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Hiç kimse kanunen tabi olduğu mahkemeden başka bir merci önüne çıkarılamaz.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Bir kimseyi kanunen tabi olduğu mahkemeden başka bir merci önüne çıkarma sonucunu doğuran yargı yetkisine sahip olağanüstü merciler kurulamaz.
+      </blockquote>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Analoji: Futbol Maçı ve Hakem</h6>
+        <p style="text-align: justify;" class="text-sm">“Maç başladıktan sonra, bir oyuncu kırmızı kart gördü diye onu yargılamak için yeni bir hakem atayamazsınız.” Bu madde tam da bunu güvence altına alır: Kişiye veya olaya özel <strong>sonradan kurulan olağanüstü mahkemeler</strong> yasaktır. Amaç, devletin keyfi yargılama yapmasını engellemektir.</p>
+      </div>
+
+      <div class="warning-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Karıştırılmaması Gerekenler: Kanuni Hâkim vs. Tabii Hâkim</h6>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li><strong>Kanuni Hâkim:</strong> Kişiyi yargılayacak <strong>mahkemenin</strong> önceden kanunla belirlenmiş olması. Anayasa’mızın kabul ettiği ilkedir.</li>
+          <li><strong>Tabii Hâkim:</strong> Sadece mahkeme değil, o davayı göreceği <strong>hâkimin</strong> bile önceden belli olması. Daha ideal ama Anayasa’mızda doğrudan yer almaz.</li>
+        </ul>
+        <p class="text-sm mt-2"><strong>Sınavda dikkat:</strong> “Anayasa hangisini güvence altına alır?” sorusunda doğru cevap <strong>“kanuni hâkim”</strong>dir.</p>
+      </div>
+    </div>
+  </details>
+
+  <!-- Madde 38 -->
+  <details id="madde-38" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 38 – Suç ve Ceza İlkeleri
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Kimse, işlendiği zaman yürürlükte bulunan kanunun suç saymadığı bir fiilden dolayı cezalandırılamaz; kimseye suçu işlediği zaman kanunda o suç için konulmuş olan cezadan daha ağır bir ceza verilemez.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Suç ve ceza zamanaşımı ile ceza mahkumiyetinin sonuçları konusunda da yukarıdaki fıkra uygulanır.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Ceza ve ceza yerine geçen güvenlik tedbirleri ancak kanunla konulur.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        <strong>Suçluluğu hükmen sabit oluncaya kadar, kimse suçlu sayılamaz.</strong>
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        <strong>Hiç kimse kendisini ve kanunda gösterilen yakınlarını suçlayan bir beyanda bulunmaya veya bu yolda delil göstermeye zorlanamaz.</strong>
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        <strong>Kanuna aykırı olarak elde edilmiş bulgular, delil olarak kabul edilemez.</strong>
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        <strong>Ceza sorumluluğu şahsidir.</strong>
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        <strong>Hiç kimse, yalnızca sözleşmeden doğan bir yükümlülüğü yerine getirememesinden dolayı özgürlüğünden alıkonulamaz.</strong>
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        <strong>Ölüm cezası ve genel müsadere cezası verilemez.</strong>
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        <strong>İdare, kişi hürriyetinin kısıtlanması sonucunu doğuran bir müeyyide uygulayamaz.</strong> Silahlı Kuvvetlerin iç düzeni bakımından bu hükme kanunla istisnalar getirilebilir.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        <strong>Uluslararası Ceza Divanına taraf olmanın gerektirdiği yükümlülükler hariç olmak üzere vatandaş, suç sebebiyle yabancı bir ülkeye verilemez.</strong>
+      </blockquote>
+
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Sınav Stratejisi: Ceza Hukukunun 9 Anayasal İlkesi</h6>
+        <p style="text-align: justify;" class="text-sm"><strong>“Aşağıdakilerden hangisi suç ve cezalara ilişkin Anayasa’nın benimsediği esaslardan biri değildir?”</strong> sorusu neredeyse her GYS’de çıkar. İşte bu maddenin güvence altına aldığı 9 ilke:</p>
+        <ol class="list-decimal pl-5 space-y-1 text-sm">
+          <li><strong>Kanunilik İlkesi:</strong> “Kanunsuz suç ve ceza olmaz.”</li>
+          <li><strong>Geriye Yürümezlik:</strong> Cezalar geriye yürümez.</li>
+          <li><strong>Masumiyet Karinesi:</strong> Mahkeme kararı olmadan kimse suçlu sayılamaz.</li>
+          <li><strong>Kendini Suçlamama Hakkı:</strong> Zorla ifade veremez.</li>
+          <li><strong>Hukuka Aykırı Delil Yasağı:</strong> İşkenceyle alınan delil geçersizdir.</li>
+          <li><strong>Cezanın Şahsiliği:</strong> Suç işleyen kişi cezalandırılır, ailesi değil.</li>
+          <li><strong>Borç Hapsi Yasağı:</strong> Borcu olan hapse atılamaz (istisnalar hariç).</li>
+          <li><strong>Ölüm Cezası ve Genel Müsadere Yasağı:</strong> Türkiye’de yoktur.</li>
+          <li><strong>İdarenin Cezasızlığı:</strong> Vali, bakan hapis veremez.</li>
+        </ol>
+      </div>
+
+      <div class="warning-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>İstisnalar ve Dikkat Edilmesi Gerekenler</h6>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li><strong>Silahlı Kuvvetler:</strong> İç disiplin için idari müeyyide ile hürriyet kısıtlanabilir (örneğin, askerî cezaevi).</li>
+          <li><strong>Vatandaşın İadesi:</strong> Normalde yasaktır. <strong>Tek istisna:</strong> Uluslararası Ceza Divanı (soykırım, insanlığa karşı suçlar).</li>
+          <li><strong>Kanuna Aykırı Delil:</strong> “Zehirli ağacın meyvesi de zehirlidir” ilkesi (Fruit of the Poisonous Tree).</li>
+        </ul>
+      </div>
+    </div>
+  </details>
+</section>
             </article>
         </div>
     </main>
