--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1543,6 +1543,105 @@
     </div>
   </details>
 </section>
+
+                <section aria-labelledby="bolum-hak-arayan-2">
+  <h3 id="bolum-hak-arayan-2" class="subsection-title text-2xl font-bold mt-12 mb-4">YEDİNCİ BÖLÜM: Hak Arama Hürriyetleri ve Yargısal Güvenceler (Devam)</h3>
+  <p class="text-slate-600 mb-6" style="text-align: justify;">
+    Bu bölüm, temel hak ve hürriyetlerin etkin bir şekilde korunmasını sağlayan <strong>son hukuki mekanizmaları</strong> kapsar. Madde 39, ifade özgürlüğü ile kamu görevlilerinin göreviyle ilgili eleştirilerin sınırlarını düzenlerken; Madde 40, ihlal edilen bir hakkın nasıl ve hangi yollarla korunabileceğini, devletin bilgilendirme yükümlülüğünü ve tazminat sorumluluğunu ortaya koyar. Bu maddeler, <strong>hakların pratikte nasıl işlediğini</strong> gösteren kritik hükümlerdir ve GYS’de sıkça yorum sorularına konu olur.
+  </p>
+
+  <!-- Madde 39 -->
+  <details id="madde-39" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 39 – İspat Hakkı
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Kamu görev ve hizmetinde bulunanlara karşı, bu görev ve hizmetin yerine getirilmesiyle ilgili olarak yapılan isnatlardan dolayı açılan hakaret davalarında, sanık, isnadın doğruluğunu ispat hakkına sahiptir.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Bunun dışındaki hallerde ispat isteminin kabulü, ancak isnat olunan fiilin doğru olup olmadığının anlaşılmasında <strong>kamu yararı bulunmasına</strong> veya <strong>şikayetçinin ispata razı olmasına</strong> bağlıdır.
+      </blockquote>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: "İftiramı arkasındayım" mı? Hayır, Hakkım var!
+        </h6>
+        <p style="text-align: justify;" class="text-sm">Bu madde, ifade özgürlüğünün kamu denetimiyle buluştuğu noktadır. Normal şartlarda, birine hakaret ettiğinizde "Doğruydu" demeniz sizi korumaz. Ancak <strong>kamu görevlileri</strong> görevlerini kamuya hizmet olarak icra ederler. Bu yüzden, onların görevlerine dair yapılan eleştirilerin doğruluğunun sorgulanabilmesi, <strong>kamuoyunun denetim hakkı</strong> açısından hayati önem taşır.</p>
+        <p style="text-align: justify;" class="text-sm mt-2">Bu madde, gazetecilerin, akademisyenlerin veya herhangi bir vatandaşın, bir belediye başkanının yolsuzluk yaptığı iddiasını mahkemede <strong>ispatlamak suretiyle savunma</strong> yapabilmesini güvence altına alır.</p>
+      </div>
+
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Sınav Stratejisi: Karşılaştırmalı Tablo – İspat Hakkı Koşulları</h6>
+        <p style="text-align: justify;" class="text-sm mb-3">GYS’de en çok çıkan soru tipi: “Aşağıdaki durumların hangisinde sanık ispat hakkını kullanabilir?” Bu tablo, tüm ihtimalleri netleştirir:</p>
+        <table class="w-full border-collapse text-sm bg-white border border-slate-300">
+          <thead>
+            <tr class="bg-slate-100">
+              <th class="border border-slate-300 p-2 text-left">Kime Karşı İsnat?</th>
+              <th class="border border-slate-300 p-2 text-left">İspat Hakkı Varmı?</th>
+              <th class="border border-slate-300 p-2 text-left">Şart</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="border border-slate-300 p-2">Kamu Görevlisi (Göreviyle İlgili)</td>
+              <td class="border border-slate-300 p-2"><strong>Var</strong></td>
+              <td class="border border-slate-300 p-2">Şart <strong>aranmaz</strong></td>
+            </tr>
+            <tr class="bg-slate-50">
+              <td class="border border-slate-300 p-2">Diğer Kişiler (Göreve İlişkin Değil)</td>
+              <td class="border border-slate-300 p-2"><strong>İstisnai</strong></td>
+              <td class="border border-slate-300 p-2">1) <strong>Kamu yararı</strong> olması<br>VEYA<br>2) <strong>Şikayetçinin rızası</strong></td>
+            </tr>
+          </tbody>
+        </table>
+        <p class="text-sm mt-2"><strong>Sınavda dikkat:</strong> “Kamu görevlisi” olmanın yeterli olmadığını, isnadın <strong>görevle ilgili olması</strong> gerektiğini unutmayın.</p>
+      </div>
+    </div>
+  </details>
+
+  <!-- Madde 40 -->
+  <details id="madde-40" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+      <span class="mr-3 text-xl">📘</span> Madde 40 – Temel Hak ve Hürriyetlerin Korunması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+        Anayasa ile tanınmış hak ve hürriyetleri ihlal edilen herkes, yetkili makama geciktirilmeden başvurma imkanının sağlanmasını isteme hakkına sahiptir.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Devlet, işlemlerinde, ilgili kişilerin hangi kanun yolları ve mercilere başvuracağını ve sürelerini belirtmek zorundadır.
+      </blockquote>
+      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+        Kişinin, Resmî görevliler tarafından vaki haksız işlemler sonucu uğradığı zarar da, kanuna göre, Devletçe tazmin edilir. Devletin sorumlu olan ilgili görevliye rücu hakkı saklıdır.
+      </blockquote>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Hakkın Üç Temel Direği</h6>
+        <p style="text-align: justify;" class="text-sm">Bu madde, temel hakların “sigortasını” çeker. Üç temel güvenceyi içerir:</p>
+        <ol class="list-decimal pl-5 space-y-1 text-sm">
+          <li><strong>Başvuru Hakkı:</strong> Hakkınız ihlal edildiyse, <strong>geciktirilmeden</strong> yetkili merciye (dilekçe, idare mahkemesi, Anayasa Mahkemesi) başvurabilirsiniz.</li>
+          <li><strong>Devletin Bilgilendirme Yükümlülüğü:</strong> 2001 değişikliğiyle eklenen bu kural, idari işlemlerde <strong>hak kaybını önler</strong>. Devlet, size bir işlem tebliğ ederken, <strong>itiraz yolu, merci ve süresini</strong> açıkça belirtmek zorundadır.</li>
+          <li><strong>Devletin Tazminat Sorumluluğu:</strong> Kusurlu bir memurun hukuka aykırı işlemiyle zarar görürseniz, <strong>doğrudan Devleti</strong> dava edersiniz. Devlet, size tazminatı öder, sonra kusurlu memurdan <strong>rücu</strong> (geri alma) eder.</li>
+        </ol>
+      </div>
+
+      <div class="highlight-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Analoji: Kargo Şirketi Modeli</h6>
+        <p style="text-align: justify;" class="text-sm">Bir memurun hatalı işlemiyle zarar gördüğünüzü düşünün. Bu, bir kargo şoförünün aracınızı çarpması gibidir. Siz şoförle değil, doğrudan <strong>kargo şirketiyle</strong> muhatap olursunuz. Şirket size tazminat öder, sonra şoförden parayı geri alır (rücu). Burada: <strong>Vatandaş = Siz, Devlet = Şirket, Memur = Şoför</strong>.</p>
+      </div>
+
+      <div class="strategy-box mt-4">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Sık Sorulan 3 Banko Soru</h6>
+        <ul class="list-disc pl-5 space-y-1 text-sm">
+          <li><strong>"Devletin bilgilendirme yükümlülüğü" ne zaman Anayasa'ya girdi?</strong> → <strong>2001</strong> değişikliğiyle.</li>
+          <li><strong>Haksız bir memur işlemiyle zarar gören kimden tazminat ister?</strong> → <strong>Devletten</strong> (memurdan değil).</li>
+          <li><strong>Devlet, tazminatı ödedikten sonra ne yapabilir?</strong> → <strong>Rücu</strong> hakkını kullanarak kusurlu memurdan alır.</li>
+        </ul>
+        <p class="text-sm mt-2"><strong>Çeldirici:</strong> “Memurdan doğrudan tazminat istenir” yanlıştır.</p>
+      </div>
+    </div>
+  </details>
+</section>
             </article>
         </div>
     </main>
