--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1478,70 +1478,97 @@
 
   <!-- Madde 38 -->
   <details id="madde-38" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
-    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-      <span class="mr-3 text-xl">📘</span> Madde 38 – Suç ve Ceza İlkeleri
-    </summary>
-    <div class="px-4 pb-4 mt-2 border-t pt-4">
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-        Kimse, işlendiği zaman yürürlükte bulunan kanunun suç saymadığı bir fiilden dolayı cezalandırılamaz; kimseye suçu işlediği zaman kanunda o suç için konulmuş olan cezadan daha ağır bir ceza verilemez.
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        Suç ve ceza zamanaşımı ile ceza mahkumiyetinin sonuçları konusunda da yukarıdaki fıkra uygulanır.
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        Ceza ve ceza yerine geçen güvenlik tedbirleri ancak kanunla konulur.
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        <strong>Suçluluğu hükmen sabit oluncaya kadar, kimse suçlu sayılamaz.</strong>
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        <strong>Hiç kimse kendisini ve kanunda gösterilen yakınlarını suçlayan bir beyanda bulunmaya veya bu yolda delil göstermeye zorlanamaz.</strong>
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        <strong>Kanuna aykırı olarak elde edilmiş bulgular, delil olarak kabul edilemez.</strong>
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        <strong>Ceza sorumluluğu şahsidir.</strong>
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        <strong>Hiç kimse, yalnızca sözleşmeden doğan bir yükümlülüğü yerine getirememesinden dolayı özgürlüğünden alıkonulamaz.</strong>
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        <strong>Ölüm cezası ve genel müsadere cezası verilemez.</strong>
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        <strong>İdare, kişi hürriyetinin kısıtlanması sonucunu doğuran bir müeyyide uygulayamaz.</strong> Silahlı Kuvvetlerin iç düzeni bakımından bu hükme kanunla istisnalar getirilebilir.
-      </blockquote>
-      <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-        <strong>Uluslararası Ceza Divanına taraf olmanın gerektirdiği yükümlülükler hariç olmak üzere vatandaş, suç sebebiyle yabancı bir ülkeye verilemez.</strong>
-      </blockquote>
+  <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+    <span class="mr-3 text-xl">📘</span> Madde 38 – Suç ve Ceza İlkeleri
+  </summary>
+  <div class="px-4 pb-4 mt-2 border-t pt-4">
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+      Kimse, işlendiği zaman yürürlükte bulunan kanunun suç saymadığı bir fiilden dolayı cezalandırılamaz; kimseye suçu işlediği zaman kanunda o suç için konulmuş olan cezadan daha ağır bir ceza verilemez.
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      Suç ve ceza zamanaşımı ile ceza mahkumiyetinin sonuçları konusunda da yukarıdaki fıkra uygulanır.
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      <strong>Ceza ve ceza yerine geçen güvenlik tedbirleri ancak kanunla konulur.</strong>
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      <strong>Suçluluğu hükmen sabit oluncaya kadar, kimse suçlu sayılamaz.</strong>
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      <strong>Hiç kimse kendisini ve kanunda gösterilen yakınlarını suçlayan bir beyanda bulunmaya veya bu yolda delil göstermeye zorlanamaz.</strong>
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      <strong>Kanuna aykırı olarak elde edilmiş bulgular, delil olarak kabul edilemez.</strong>
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      <strong>Ceza sorumluluğu şahsidir.</strong>
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      <strong>Hiç kimse, yalnızca sözleşmeden doğan bir yükümlülüğü yerine getirememesinden dolayı özgürlüğünden alıkonulamaz.</strong>
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      <strong>Ölüm cezası ve genel müsadere cezası verilemez.</strong>
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      <strong>İdare, kişi hürriyetinin kısıtlanması sonucunu doğuran bir müeyyide uygulayamaz.</strong> Silahlı Kuvvetlerin iç düzeni bakımından bu hükme kanunla istisnalar getirilebilir.
+    </blockquote>
+    <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+      <strong>Uluslararası Ceza Divanına taraf olmanın gerektirdiği yükümlülükler hariç olmak üzere vatandaş, suç sebebiyle yabancı bir ülkeye verilemez.</strong>
+    </blockquote>
 
-      <div class="strategy-box mt-4">
-        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Sınav Stratejisi: Ceza Hukukunun 9 Anayasal İlkesi</h6>
-        <p style="text-align: justify;" class="text-sm"><strong>“Aşağıdakilerden hangisi suç ve cezalara ilişkin Anayasa’nın benimsediği esaslardan biri değildir?”</strong> sorusu neredeyse her GYS’de çıkar. İşte bu maddenin güvence altına aldığı 9 ilke:</p>
-        <ol class="list-decimal pl-5 space-y-1 text-sm">
-          <li><strong>Kanunilik İlkesi:</strong> “Kanunsuz suç ve ceza olmaz.”</li>
-          <li><strong>Geriye Yürümezlik:</strong> Cezalar geriye yürümez.</li>
-          <li><strong>Masumiyet Karinesi:</strong> Mahkeme kararı olmadan kimse suçlu sayılamaz.</li>
-          <li><strong>Kendini Suçlamama Hakkı:</strong> Zorla ifade veremez.</li>
-          <li><strong>Hukuka Aykırı Delil Yasağı:</strong> İşkenceyle alınan delil geçersizdir.</li>
-          <li><strong>Cezanın Şahsiliği:</strong> Suç işleyen kişi cezalandırılır, ailesi değil.</li>
-          <li><strong>Borç Hapsi Yasağı:</strong> Borcu olan hapse atılamaz (istisnalar hariç).</li>
-          <li><strong>Ölüm Cezası ve Genel Müsadere Yasağı:</strong> Türkiye’de yoktur.</li>
-          <li><strong>İdarenin Cezasızlığı:</strong> Vali, bakan hapis veremez.</li>
-        </ol>
-      </div>
-
-      <div class="warning-box mt-4">
-        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>İstisnalar ve Dikkat Edilmesi Gerekenler</h6>
-        <ul class="list-disc pl-5 space-y-1 text-sm">
-          <li><strong>Silahlı Kuvvetler:</strong> İç disiplin için idari müeyyide ile hürriyet kısıtlanabilir (örneğin, askerî cezaevi).</li>
-          <li><strong>Vatandaşın İadesi:</strong> Normalde yasaktır. <strong>Tek istisna:</strong> Uluslararası Ceza Divanı (soykırım, insanlığa karşı suçlar).</li>
-          <li><strong>Kanuna Aykırı Delil:</strong> “Zehirli ağacın meyvesi de zehirlidir” ilkesi (Fruit of the Poisonous Tree).</li>
-        </ul>
-      </div>
+    <!-- 1. Uyarı: Ceza yerine geçen güvenlik tedbirleri -->
+    <div class="warning-box mt-4">
+      <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Uyarı: "Ceza Benzeri" Tedbirler de Kanunla Düzenlenir</h6>
+      <p style="text-align: justify;" class="text-sm">Bu hüküm sadece hapis cezalarını değil, <strong>ceza yerine geçen güvenlik tedbirlerini</strong> de kapsar. Bu tedbirler, suçun tekrarını önlemek amacıyla verilir ve "ceza benzeri" etki yaratır. Bu yüzden onların da <strong>kanunla önceden belirlenmiş olması</strong> gerekir. Örnekler:</p>
+      <ul class="list-disc pl-5 space-y-1 text-sm">
+        <li>Denetimli serbestlik</li>
+        <li>Tedavi ve gözetim altına alınma</li>
+        <li>Yakınlarının gözetimine verilme</li>
+      </ul>
+      <p class="text-sm mt-2"><strong>Sınavda dikkat:</strong> “Bu tedbirler kanunla düzenlenmez” yanlıştır. Kanunilik ilkesi bunlara da uygulanır.</p>
     </div>
-  </details>
+
+    <!-- 2. Özel Not: Nafaka Borcu İstisnası -->
+    <div class="highlight-box mt-4">
+      <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💬</span>Özel Not: Nafaka Borcu İstisnası</h6>
+      <p style="text-align: justify;" class="text-sm">Bu kuralın tek istisnası, <strong>nafaka borcu</strong> gibi kamu düzeniyle ilgili <strong>yasal yükümlülüklerin</strong> yerine getirilmemesidir. Nafaka ödenmezse, borçlu kişiye <strong>tazyik hapsi</strong> verilebilir. Bu, "sözleşme" değil, <strong>kanunen doğan bir borç</strong> olduğundan istisna kapsamındadır.</p>
+    </div>
+
+    <!-- 3. Açıklama: Vatandaşın İadesi ve Roma Statüsü -->
+    <div class="highlight-box mt-4">
+      <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💬</span>Açıklama: Vatandaşın İadesi ve Roma Statüsü</h6>
+      <p style="text-align: justify;" class="text-sm">Türkiye, <strong>Roma Statüsü</strong>ne taraf değildir, ancak bu madde, <em>eğer</em> taraf olursa, <strong>Uluslararası Ceza Divanı (UCD)</strong> tarafından talep edilen kişilerin (soykırım, insanlığa karşı suçlar, savaş suçları) Türkiye'den iade edilebileceğini öngörür.</p>
+      <p style="text-align: justify;" class="text-sm mt-2">Bu, vatandaşın <strong>mutlak koruması</strong> içindeki tek hukuki istisnadır. Sınavda “Türkiye, UCD’ye bağlıysa vatandaş iade edilir mi?” sorusunun cevabı: <strong>Evet, sadece UCD yükümlülükleri kapsamında</strong>.</p>
+    </div>
+
+    <!-- Sınav Stratejisi: 9 İlke -->
+    <div class="strategy-box mt-4">
+      <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Sınav Stratejisi: Ceza Hukukunun 9 Anayasal İlkesi</h6>
+      <p style="text-align: justify;" class="text-sm"><strong>“Aşağıdakilerden hangisi suç ve cezalara ilişkin Anayasa’nın benimsediği esaslardan biri değildir?”</strong> sorusu neredeyse her GYS’de çıkar. İşte bu maddenin güvence altına aldığı 9 ilke:</p>
+      <ol class="list-decimal pl-5 space-y-1 text-sm">
+        <li><strong>Kanunilik İlkesi:</strong> “Kanunsuz suç ve ceza olmaz.”</li>
+        <li><strong>Geriye Yürümezlik:</strong> Cezalar geriye yürümez.</li>
+        <li><strong>Masumiyet Karinesi:</strong> Mahkeme kararı olmadan kimse suçlu sayılamaz.</li>
+        <li><strong>Kendini Suçlamama Hakkı:</strong> Zorla ifade veremez.</li>
+        <li><strong>Hukuka Aykırı Delil Yasağı:</strong> İşkenceyle alınan delil geçersizdir.</li>
+        <li><strong>Cezanın Şahsiliği:</strong> Suç işleyen kişi cezalandırılır, ailesi değil.</li>
+        <li><strong>Borç Hapsi Yasağı:</strong> Borcu olan hapse atılamaz (istisnalar hariç).</li>
+        <li><strong>Ölüm Cezası ve Genel Müsadere Yasağı:</strong> Türkiye’de yoktur.</li>
+        <li><strong>İdarenin Cezasızlığı:</strong> Vali, bakan hapis veremez.</li>
+      </ol>
+    </div>
+
+    <!-- Karıştırılmaması Gerekenler -->
+    <div class="warning-box mt-4">
+      <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>İstisnalar ve Dikkat Edilmesi Gerekenler</h6>
+      <ul class="list-disc pl-5 space-y-1 text-sm">
+        <li><strong>Silahlı Kuvvetler:</strong> İç disiplin için idari müeyyide ile hürriyet kısıtlanabilir (örneğin, askerî cezaevi).</li>
+        <li><strong>Vatandaşın İadesi:</strong> Normalde yasaktır. <strong>Tek istisna:</strong> Uluslararası Ceza Divanı (soykırım, insanlığa karşı suçlar).</li>
+        <li><strong>Kanuna Aykırı Delil:</strong> “Zehirli ağacın meyvesi de zehirlidir” ilkesi (Fruit of the Poisonous Tree).</li>
+      </ul>
+    </div>
+  </div>
+</details>
 </section>
 
                 <section aria-labelledby="bolum-hak-arayan-2">
@@ -1642,6 +1669,7 @@
     </div>
   </details>
 </section>
+                
             </article>
         </div>
     </main>
