--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1535,11 +1535,12 @@
     </div>
 
     <!-- 3. Açıklama: Vatandaşın İadesi ve Roma Statüsü -->
-    <div class="highlight-box mt-4">
-      <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💬</span>Açıklama: Vatandaşın İadesi ve Roma Statüsü</h6>
-      <p style="text-align: justify;" class="text-sm">Türkiye, <strong>Roma Statüsü</strong>ne taraf değildir, ancak bu madde, <em>eğer</em> taraf olursa, <strong>Uluslararası Ceza Divanı (UCD)</strong> tarafından talep edilen kişilerin (soykırım, insanlığa karşı suçlar, savaş suçları) Türkiye'den iade edilebileceğini öngörür.</p>
-      <p style="text-align: justify;" class="text-sm mt-2">Bu, vatandaşın <strong>mutlak koruması</strong> içindeki tek hukuki istisnadır. Sınavda “Türkiye, UCD’ye bağlıysa vatandaş iade edilir mi?” sorusunun cevabı: <strong>Evet, sadece UCD yükümlülükleri kapsamında</strong>.</p>
-    </div>
+<div class="highlight-box mt-4">
+  <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💬</span>Açıklama: Vatandaşın İadesi – Anayasal Koruma ve İstisna</h6>
+  <p style="text-align: justify;" class="text-sm">Anayasamız, bir vatandaşın <strong>suç sebebiyle yabancı bir ülkeye iade edilmesini</strong> kesinlikle yasaklar. Bu, vatandaşın en temel hukuki korumalarından biridir.</p>
+  <p style="text-align: justify;" class="text-sm mt-2">Bu yasağın tek bir istisnası vardır: <strong>Uluslararası Ceza Divanına (UCD) taraf olunmasının gerektirdiği yükümlülükler</strong>. Yani, Türkiye bu Divan’a üye olursa, UCD’nin soykırım, insanlığa karşı suçlar ve savaş suçları kapsamında talep ettiği kişilerin iadesi mümkündür.</p>
+  <p style="text-align: justify;" class="text-sm mt-2"><strong>Sınavda dikkat:</strong> Bu istisna, “Aşağıdakilerden hangisi bir istisnadır?” tarzı sorularda <strong>“Uluslararası Ceza Divanı yükümlülükleri”</strong> ifadesiyle gelir. Türkiye'nin şu an bu Divan’a üye olmaması, Anayasa'daki bu hükmün varlığını değiştirmez.</p>
+</div>
 
     <!-- Sınav Stratejisi: 9 İlke -->
     <div class="strategy-box mt-4">
